[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
env_logger = "0.10.0"
winapi = { version = "0.3.9", features = ["minwindef", "memoryapi", "handleapi", "psapi"] }
widestring = "1.0.2"

